@@ -1,44 +1,0 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title><%= options[:name] %></title>
-  <%%= stylesheet_link_tag :base, "themes/<%= options[:theme] %>/style" %>
-</head>
-<body>
-  <div id="container">
-    <div id="header">
-      <h1><%%= link_to "<%= options[:name] %>", url(:base_index) %></h1>
-      <div id="user-navigation">
-        <ul class="wat-cf">
-          <li><%%= link_to pat(:profile), url(:accounts, :edit, :id => current_account.id) %></li>
-          <li><%%= button_to pat(:logout), url(:sessions, :destroy), :method => :delete, :class => :button_to %></li>
-        </ul>
-      </div>
-      <div id="main-navigation">
-        <ul class="wat-cf">
-          <%% project_modules.each do |project_module| %>
-            <li class="<%%= "active" if request.path_info =~ /^#{project_module.path}/ %>"><%%= link_to project_module.human_name, project_module.path("/admin") %></li>
-          <%% end %>
-        </ul>
-      </div>
-    </div>
-    <div id="wrapper" class="wat-cf">
-      <div class="flash">
-        <%%= [:error, :warning, :notice].map { |type| flash_tag(type, :class => "message #{type}") }.join %>
-      </div>
-      <div id="main">
-        <%%= yield %>
-        <div id="footer">
-          <div class="block">
-            <p>Copyright &copy; <%%= Time.now.year %> Your Site - Powered by <a href="http://padrino.github.com" target="_blank">Padrino v.<%%= Padrino.version %>.</a></p>
-          </div>
-        </div>
-      </div>
-      <div id="sidebar">
-        <%%= yield_content :sidebar %>
-      </div>
-    </div>
-  </div>
-</body>
-</html>
