@@ -1,56 +1,0 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title><%= options[:name] %></title>
-  <%%= stylesheet_link_tag :base, "themes/<%= options[:theme] %>/style" %>
-</head>
-<body>
-  <div id="container">
-    <div id="box">
-      <h1><%= options[:name] %></h1>
-      <div class="block" id="block-login">
-        <h2>Login Box</h2>
-        <div class="content login">
-          <div class="flash">
-            <%%= [:error, :warning, :notice].map { |type| flash_tag(type, :class => "message #{type}") }.join %>
-          </div>
-          <%% form_tag(url(:sessions, :create), :class => 'form login') do %>
-            <div class="group wat-cf">
-              <div class="left">
-                <label class="label right">Login</label>
-              </div>
-              <div class="right">
-                <%%= text_field_tag :email, :value => params[:email], :class => 'text_field' %>
-              </div>
-            </div>
-            <div class="group wat-cf">
-              <div class="left">
-                <label class="label right">Password</label>
-              </div>
-              <div class="right">
-                <%%= password_field_tag :password, :value => params[:password], :class => 'text_field' %>
-              </div>
-            </div>
-            <%% if Padrino.env == :development %>
-              <div class="group wat-cf">
-                <div class="left">
-                  <label class="label right">Bypass login?</label>
-                </div>
-                <div class="right">
-                  <%%= check_box_tag :bypass %>
-                </div>
-              </div>
-            <%% end %>
-            <div class="group navform wat-cf">
-              <div class="right">
-                <%%= submit_tag "Sign in", :class => :button %>
-              </div>
-            </div>
-          <%% end %>
-        </div>
-      </div>
-    </div>
-  </div>
-</body>
-</html>
