@@ -1,36 +1,0 @@
-<div class="block">
-  <div class="secondary-navigation">
-    <ul class="wat-cf">
-      <li class="first active"><%%= link_to pat(:list), url(:<%= @orm.name_plural %>, :index) %></li>
-      <li><%%= link_to pat(:new), url(:<%= @orm.name_plural %>, :new) %></li>
-    </ul>
-  </div>
-  <div class="content">
-    <h2 class="title"><%%= pat(:all) %> <%% mt(:<%= @orm.name_plural %>) %></h2>
-    <div class="inner">
-      <table class="table">
-        <tr>
-          <%- @orm.columns.each_with_index do |column, i| -%>
-          <th<%= " class=\"first\"" if i==0 %>><%%= mat(:<%= @orm.name_singular %>, :<%= column.name %>) %></th>
-          <%- end -%>
-          <th class="last">&nbsp;</th>
-        </tr>
-        <%% @<%= @orm.name_plural %>.each do |<%= @orm.name_singular %>| %>
-        <tr>
-          <%- @orm.columns.each_with_index do |column, i| -%>
-          <td<%= " class=\"first\"" if i==0 %>><%%= <%= @orm.name_singular %>.<%= column.name %> %></td>
-          <%- end -%>
-          <td class="last">
-            <%%= button_to pat(:edit), url(:<%= @orm.name_plural %>, :edit, :id => <%= @orm.name_singular %>.id), :method => :get, :class => :button_to %> |
-            <%%= button_to pat(:delete), url(:<%= @orm.name_plural %>, :destroy, :id => <%= @orm.name_singular %>.id), :method => :delete, :class => :button_to, :onsubmit => "return confirm('#{pat(:confirm)}')" %>
-          </td>
-        </tr>
-        <%% end %>
-      </table>
-      <div class="actions-bar wat-cf">
-        <div class="actions"></div>
-      </div>
-    </div>
-  </div>
-</div>
-<%% content_for :sidebar, partial("base/sidebar") %>
