@@ -1,17 +1,0 @@
-<div class="block">
-  <div class="secondary-navigation">
-    <ul class="wat-cf">
-      <li class="first"><%%= link_to pat(:list), url(:<%= @orm.name_plural %>, :index) %></li>
-      <li class="active"><%%= link_to pat(:new), url(:<%= @orm.name_plural %>, :new) %></li>
-    </ul>
-  </div>
-  <div class="content">
-    <h2 class="title"><%%= pat(:new) %> <%% mt(:<%= @orm.name_singular %>) %></h2>
-    <div class="inner">
-      <%% form_for :<%= @orm.name_singular %>, url(:<%= @orm.name_plural %>, :create), :class => :form do |f| %>
-        <%%= partial "<%= @orm.name_plural %>/form", :locals => { :f => f } %>
-      <%% end %>
-    </div>
-  </div>
-</div>
-<%% content_for :sidebar, partial("base/sidebar") %>
