@@ -17,9 +17,10 @@ Gem::Specification.new do |s|
   s.files = %w(.document .gitignore LICENSE README.rdoc Rakefile padrino-core.gemspec) + Dir.glob("{bin,lib,test}/**/*")
   s.rdoc_options = ["--charset=UTF-8"]
   s.require_path = "lib"
+  s.add_dependency("tilt", "~> 1.3.0")
   s.add_dependency("sinatra", "~> 1.2.3")
   s.add_dependency("http_router", "~> 0.7.0")
-  s.add_dependency("thor", ">=0.14.3")
+  s.add_dependency("thor", ">= 0.14.3")
   s.add_dependency("activesupport", ">= 3.0.0")
   s.add_dependency("tzinfo")
 end
