@@ -1,3 +1,0 @@
-def setup_renderer
-  require_dependencies 'erubis', :version => "~> 2.7.0"
-end
