@@ -34,7 +34,7 @@ module Padrino
       component_option :test,       "testing framework",  :aliases => '-t', :choices => [:rspec, :shoulda, :cucumber, :bacon, :testspec, :riot], :default => :none
       component_option :mock,       "mocking library",    :aliases => '-m', :choices => [:mocha, :rr], :default => :none
       component_option :script,     "javascript library", :aliases => '-s', :choices => [:jquery, :prototype, :rightjs, :mootools, :extcore, :dojo], :default => :none
-      component_option :renderer,   "template engine",    :aliases => '-e', :choices => [:haml, :erb, :erubis, :liquid, :slim], :default => :haml
+      component_option :renderer,   "template engine",    :aliases => '-e', :choices => [:haml, :erb, :liquid, :slim], :default => :haml
       component_option :stylesheet, "stylesheet engine",  :aliases => '-c', :choices => [:less, :sass, :compass, :scss], :default => :none
 
       # Show help if no argv given
