@@ -46,7 +46,6 @@ module Padrino
         options["data-method"] = data_method if data_method
         options["accept-charset"] ||= "UTF-8"
         inner_form_html  = hidden_form_method_field(desired_method)
-        capture_html(&block)
         inner_form_html += capture_html(&block)
         concat_content content_tag(:form, inner_form_html, options)
       end
